tests/conformance/fail/types/string_to_string_var.ny
fn main() {
    let label: string = 99
}
